Added magic-link-sso generator
